--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -24,7 +24,10 @@
       </div>
       <div>
         <button type="submit" class="save-btn">Save</button>
-        <button type="submit" class="delete-btn" data-id="<%= memo._id %>">Delete</button>
+        <!-- <button type="submit" class="delete-btn" data-id="<%= memo._id %>">Delete</button> -->
+        <form action="/delete/<%= memo._id %>?_method=DELETE" method="POST" class="delete-btn">
+          <button type="submit">Delete</button>
+        </form>
       </div>
       <a href="/" class="cancel-btn">Cancel</a>
     </form>
